# wizzair-flight-finder

./: Cargo.toml  README.md  build.sh
src/: flight_finder.rs  lambda_main.rs  mailer.rs  main.rs  renderer.rs  thread_pool.rs
src/chrono/: last_day_of_month.rs  mod.rs
src/flight_matcher/: flight_matcher.rs  mod.rs
src/reqwest/: flights_client.rs  metadata_client.rs  mod.rs
src/serde/: date.rs  departure_dates.rs  mod.rs
templates/: index.html
